--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,6 +602,11 @@ section {
 /*--------------------------------------------------------------
 # Why Us
 --------------------------------------------------------------*/
+
+.why-us .box fount{
+    color: black;
+}
+
 .why-us {
   padding-top: 0;
 }
