--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 a {
-  color: #cc1616;
+  color: #CFD200;
 }
 
 a:hover {
-  color: #e82d2d;
+  color: #CFD200;
   text-decoration: none;
 }
 
@@ -44,13 +44,13 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
   width: 40px;
   height: 40px;
-  background: #cc1616;
+  background: black;
   color: #fff;
   transition: all 0.4s;
 }
 
 .back-to-top i:hover {
-  background: #e72323;
+  background: #CFD200;
   color: #fff;
 }
 
@@ -73,7 +73,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #cc1616;
+  border: 6px solid #CFD200;
   border-top-color: #efefef;
   border-radius: 50%;
   width: 60px;
@@ -134,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #topbar .contact-info i {
-  color: #cc1616;
+  color: #CFD200;
   padding-right: 4px;
 }
 
@@ -238,7 +238,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu > ul > li:hover, .nav-menu .active {
-  background: #cc1616;
+  background: #CFD200;
 }
 
 .nav-menu .drop-down ul {
@@ -275,7 +275,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #e82d2d;
+  color: #CFD200;
 }
 
 .nav-menu .drop-down > a:after {
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #e82d2d;
+  color: #CFD200;
   text-decoration: none;
 }
 
@@ -438,7 +438,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -490,8 +490,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #cc1616;
-  border-color: #cc1616;
+  background: #CFD200;
+  border-color: #CFD200;
 }
 
 @media (min-width: 1024px) {
@@ -592,7 +592,7 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #cc1616;
+  color: #CFD200;
 }
 
 .about .content p:last-child {
@@ -621,7 +621,7 @@ section {
   display: block;
   font-size: 28px;
   font-weight: 700;
-  color: #ed5b5b;
+  color: #CFD200;
 }
 
 .why-us .box h4 {
@@ -640,7 +640,7 @@ section {
 }
 
 .why-us .box:hover {
-  background: #cc1616;
+  background: #CFD200;
   padding: 30px 30px 70px 30px;
   box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
 }
@@ -693,7 +693,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #cc1616;
+  background: #CFD200;
   transition: all .3s ease-out 0s;
   display: flex;
   align-items: center;
@@ -736,8 +736,8 @@ section {
 }
 
 .services .icon-box:hover {
-  background: #cc1616;
-  border-color: #cc1616;
+  background: #CFD200;
+  border-color: #CFD200;
   padding: 70px 20px 90px 20px;
 }
 
@@ -746,11 +746,11 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #cc1616;
+  color: #CFD200;
 }
 
 .services .icon-box:hover .icon::before {
-  background: #e82d2d;
+  background: #CFD200;
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
@@ -791,8 +791,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #cc1616;
-  border: 2px solid #cc1616;
+  background: #CFD200;
+  border: 2px solid #CFD200;
 }
 
 /*--------------------------------------------------------------
@@ -821,7 +821,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #e82d2d;
+  color: #CFD200;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -866,7 +866,7 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #cc1616;
+  color: #CFD200;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -892,7 +892,7 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-links a:hover {
-  color: #e82d2d;
+  color: #CFD200;
 }
 
 .portfolio .portfolio-item:hover .portfolio-info {
@@ -923,7 +923,7 @@ section {
 
 .pricing .box h4 {
   font-size: 42px;
-  color: #cc1616;
+  color: #CFD200;
   font-weight: 500;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 20px;
@@ -955,7 +955,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #cc1616;
+  color: #CFD200;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -971,7 +971,7 @@ section {
 }
 
 .pricing .box .btn-buy {
-  background: #cc1616;
+  background: #CFD200;
   display: inline-block;
   padding: 10px 40px;
   color: #fff;
@@ -984,11 +984,11 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #e82d2d;
+  background: #CFD200;
 }
 
 .pricing .featured {
-  background: #cc1616;
+  background: #CFD200;
   box-shadow: none;
   color: #fff;
 }
@@ -1012,7 +1012,7 @@ section {
 
 .pricing .featured .btn-buy:hover {
   background: #fff;
-  color: #cc1616;
+  color: #CFD200;
 }
 
 /*--------------------------------------------------------------
@@ -1061,7 +1061,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #cc1616;
+  color: #CFD200;
 }
 
 .team .member .social i {
@@ -1081,7 +1081,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #cc1616;
+  color: #CFD200;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #f5a0a0;
@@ -1108,7 +1108,7 @@ section {
 
 .contact .php-email-form .validate {
   display: none;
-  color: red;
+  color: yellow;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
@@ -1159,7 +1159,7 @@ section {
 }
 
 .contact .php-email-form input::focus, .contact .php-email-form textarea::focus {
-  background-color: #cc1616;
+  background-color: #CFD200;
 }
 
 .contact .php-email-form input {
@@ -1171,7 +1171,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #cc1616;
+  background: #CFD200;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1179,7 +1179,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #e82d2d;
+  background: #CFD200;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1271,7 +1271,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #cc1616 !important;
+  background-color: #CFD200 !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1342,7 +1342,7 @@ section {
   margin-bottom: 15px;
   background: #191919;
   color: #fff;
-  border-top: 4px solid #cc1616;
+  border-top: 4px solid #CFD200;
   text-align: center;
   padding: 30px 20px;
 }
@@ -1378,7 +1378,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #cc1616;
+  background: #CFD200;
   color: #fff;
   text-decoration: none;
 }
@@ -1403,7 +1403,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ed5b5b;
+  color: #F8FA30;
   font-size: 18px;
   line-height: 1;
 }
@@ -1426,7 +1426,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #eb4444;
+  color:  #F8FA30;
 }
 
 #footer .footer-top .footer-newsletter form {
@@ -1452,14 +1452,14 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #cc1616;
+  background: #CFD200;
   color: #fff;
   transition: 0.3s;
   border-radius: 4;
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #e82d2d;
+  background: #CFD200;
 }
 
 #footer .copyright {
@@ -1476,7 +1476,7 @@ section {
 }
 
 #footer .credits a {
-  color: #e82d2d;
+  color: #CFD200;
 }
 
 @media (max-width: 575px) {
