--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1484,3 +1484,38 @@ section {
     margin: -20px 0 30px 0;
   }
 }
+
+
+/*--------------------------------------------------------------
+# boton flotante chat
+--------------------------------------------------------------*/
+
+.btn-chat {
+        display:block;
+        width:90px;
+        height:160px;
+        color#fff;
+        position: fixed;
+        right:20px;
+        bottom:20px;
+        border-radius:50%;
+        line-height:80px;
+        text-align:center;
+        z-index:999;
+    
+    
+}
+
+.zoom{
+		transition: 1s ease;
+ 		-moz-transition: 1s ease; /* Firefox */
+ 		-webkit-transition: 1s ease; /* Chrome - Safari */
+ 		-o-transition: 1s ease; /* Opera */
+	}
+	.zoom:hover{
+		transform : scale(2);
+		-moz-transform : scale(1.5); /* Firefox */
+		-webkit-transform : scale(1.5); /* Chrome - Safari */
+		-o-transform : scale(1.5); /* Opera */
+		-ms-transform : scale(1.5); /* IE9 */
+	}
